examples/ex3/test_cases/failing/check18_return_type_does_not_match.java
class Main {
    public static void main(String[] a) { 
        System.out.println(3);
    }
}

class Simple {

    public boolean func() {
        int num;

        num = 5;

        return num;
    }
}